@@ -57,3 +57,4 @@ export(curvesplot)
 export(targetplot)
 export(bmdplotwithgradient)
 export(ecdfquantileplot)
+export(trendplot)
